--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/utils.css">
 </head>
 <body>
-    
+    <header></header>
+    <main></main>
+    <footer class="flex-all-center">
+        <p >Copyright &copy; MyCart.com</p>
+    </footer>
 </body>
 </html>
