--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
     <link rel="stylesheet" href="/css/utils.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <nav>
+            <ul>
+                <a href="home.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="contact.html">Contact</a>
+            </ul>     
+        </nav>
+    </header>
     <main></main>
     <footer class="flex-all-center">
         <p >Copyright &copy; MyCart.com</p>
